--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^3.1.0",
-    "homepage": "https://ronaldo-santana-dev.github.io/myportfolio/",
+    "homepage": "https://ronaldo-santana-dev.github.io/myportfolio/index.html",
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
